--- a/client/style/main.styl
+++ b/client/style/main.styl
@@ -5,6 +5,8 @@
 @import "common/font-size.styl"
 
 // inject:all
+@import "../../client/react/common/logo/logo.styl";
+@import "../../client/react/layout/with-main-nav/with-main-nav.styl";
 @import "../../client/react/main-route.styl";
 @import "../../client/react/routes/welcome-route/welcome-route.styl";
 // endinject
