--- a/client/style/common/common.styl
+++ b/client/style/common/common.styl
@@ -1,6 +1,10 @@
 @import "utils.styl"
+
+#wrapper{
+  width 100%
+  height 100%
+}
 html,body{
-  background-color #e5e5e5
   padding-bottom 100px
 }
 .disabledEvent{
