--- a/client/react/common/logo/logo.styl
+++ b/client/react/common/logo/logo.styl
@@ -1,22 +1,27 @@
-.logo{
-  img{
-    margin-right 10px
-  }
-  display flex
-  align-items center
-  color black
-  font-weight 550
-  font-family: 'Jua', sans-serif
-  &.logo-md{
-    height 65px
-    font-size md + 0.2rem
-  }
-  &.logo-sm{
-    height 35px
-    font-size md
-  }
-  &.logo-lg{
-    height 85px
-    font-size md + 0.4rem
+.logo-wrap{
+  .logo{
+    img{
+      margin-right 10px
+    }
+    .brand-name{
+      color black
+      font-weight 550
+      font-family: 'Jua', sans-serif
+    }
+    display flex
+    align-items center
+
+    &.logo-md{
+      height 65px
+      font-size md + 0.2rem
+    }
+    &.logo-sm{
+      height 35px
+      font-size md
+    }
+    &.logo-lg{
+      height 85px
+      font-size md + 0.4rem
+    }
   }
 }
