--- a/client/react/layout/with-main-nav/with-main-nav.styl
+++ b/client/react/layout/with-main-nav/with-main-nav.styl
@@ -1,6 +1,98 @@
+deepblack=#1d1d1d
+
 .main-nav{
   height 65px
   background-color white
-  border-bottom 3px solid primary
+  .right-side{
+    flex-grow 1
+    margin-left 300px
+    justify-content flex-end
+    align-items center
+    .separate{
+      width 2px
+      height 20px
+      background-color deepblack
+      margin 0 15px
+    }
+    .show-icon{
+      color deepblack
+      font-size sm
+    }
+    .show-icon{
+      position relative
+      margin-left 6px
+      padding-bottom 3px
+      width 12px
+      .icon{
+        position absolute
+        top 50%
+        left 50%
+        transform translate(-50%, -50%)
+      }
+      .icon-enter {
+        opacity: 0;
+        &.isShow{
+          transform translate(-50%,-100%);
+        }
+        &.isHide{
+          transform translate(-50%,0);
+        }
+      }
+
+      .icon-enter-active {
+        opacity: 1;
+        transition: all 0.2s linear;
+        &.isShow{
+          transform translate(-50%, -50%)
+        }
+        &.isHide{
+          transform translate(-50%, -50%);
+        }
+      }
+
+      .icon-exit {
+        opacity  1
+
+      }
+
+      .icon-exit-active {
+        opacity: 0;
+        transition: all 0.2s linear;
+        &.isShow{
+          transform translate(-50%,-100%);
+        }
+        &.isHide{
+          transform translate(-50%,0);
+        }
+      }
+    }
+    .lgp-wrap{
+      position relative
+      .lp-btn{
+        font-size lg + 0.2rem
+        cursor pointer
+        color deepblack
+      }
+    }
+    .login-btn{
+
+      button{
+        vertical-align middle
+        font-size sm - 0.2rem
+        padding 5px 15px
+        text-align center
+        border 2px solid deepblack
+        border-radius 20px
+        color #1d1d1d
+        background-color white
+        font-weight 550
+        setTransition(0.2s)
+        &:hover{
+          background-color deepblack
+          color white
+        }
+      }
+    }
+  }
 
 }
