--- a/client/style/common/common.styl
+++ b/client/style/common/common.styl
@@ -10,6 +10,12 @@ html,body{
 .disabledEvent{
   pointer-events none
 }
+.flex-wrapper{
+  display flex
+}
+.disable-a-behavior{
+  text-decoration none !important
+}
 .disabled{
   opacity 0.4
 }
