--- a/client/style/main.styl
+++ b/client/style/main.styl
@@ -5,6 +5,7 @@
 @import "common/font-size.styl"
 
 // inject:all
+@import "../../client/react/common/language-picker/language-picker.styl";
 @import "../../client/react/common/logo/logo.styl";
 @import "../../client/react/layout/with-main-nav/with-main-nav.styl";
 @import "../../client/react/main-route.styl";
