--- a/client/react/common/logo/logo.styl
+++ b/client/react/common/logo/logo.styl
@@ -1,10 +1,20 @@
 .logo-wrap{
   .logo{
+    &.dark-light{
+      .brand-name{
+        color black
+      }
+    }
+    &.sky{
+      .brand-name{
+        color white
+      }
+    }
     img{
       margin-right 10px
     }
     .brand-name{
-      color black
+
       font-weight 550
       font-family: 'Jua', sans-serif
     }
