--- a/client/style/common/common.styl
+++ b/client/style/common/common.styl
@@ -6,6 +6,9 @@
 }
 html,body{
   padding-bottom 100px
+  &.dark-light{
+    background-color #1d1d1d
+  }
 }
 .disabledEvent{
   pointer-events none
