--- a/client/style/main.styl
+++ b/client/style/main.styl
@@ -5,8 +5,10 @@
 @import "common/font-size.styl"
 
 // inject:all
+@import "../../client/react/common/autocomplete/autocomplete.styl";
 @import "../../client/react/common/language-fetcher/language-fetcher.styl";
 @import "../../client/react/common/logo/logo.styl";
+@import "../../client/react/layout/with-main-nav/nav-list.styl";
 @import "../../client/react/layout/with-main-nav/with-main-nav.styl";
 @import "../../client/react/main-route.styl";
 @import "../../client/react/routes/component/language-picker/language-picker.styl";
