--- a/client/react/layout/with-main-nav/with-main-nav.styl
+++ b/client/react/layout/with-main-nav/with-main-nav.styl
@@ -52,7 +52,7 @@
     }
   }
   &.sky{
-    background-color primary
+    background-color fb
     .separate{
       background-color white
     }
@@ -60,11 +60,11 @@
       button{
         border-color white
         color white
-        background-color primary
+        background-color fb
 
         &:hover{
           background-color white
-          color primary
+          color fb
         }
       }
     }
