--- a/client/react/routes/component/theme-picker/theme-box/theme-box.styl
+++ b/client/react/routes/component/theme-picker/theme-box/theme-box.styl
@@ -35,7 +35,7 @@ setPart(color1, color2){
     height 100%
   }
   &.sky{
-    setPart(primary, white)
+    setPart(fb, white)
   }
   &.dark-light{
     setPart(white, deepblack)
