--- a/client/style/common/common.styl
+++ b/client/style/common/common.styl
@@ -5,7 +5,6 @@
   height 100%
 }
 html,body{
-  padding-bottom 100px
   &.dark-light{
     background-color #1d1d1d
   }
@@ -98,4 +97,7 @@ scrollStyle(grey)
     transform translate(-50%,-50%)
 
   }
+}
+.of-hidden{
+  overflow hidden
 }
