--- a/client/style/common/utils.styl
+++ b/client/style/common/utils.styl
@@ -28,3 +28,15 @@ scrollStyle(color){
 setTransition(time){
   transition all time ease
 }
+scaleHorizontal(root, scale, time){
+  @keyframes sh{
+    from {
+      width root
+    }
+    to{
+      width scale
+    }
+  }
+
+  animation sh time ease forwards
+}
