--- a/client/style/common/common.styl
+++ b/client/style/common/common.styl
@@ -101,3 +101,10 @@ scrollStyle(grey)
 .of-hidden{
   overflow hidden
 }
+.long-btn{
+  outline none
+  border-radius 4px
+  text-align center
+  width 100%
+  padding 8px 20px
+}
