--- a/client/style/main.styl
+++ b/client/style/main.styl
@@ -9,8 +9,10 @@
 @import "../../client/react/common/common-btn/common-btn.styl";
 @import "../../client/react/common/common-input/common-input.styl";
 @import "../../client/react/common/language-fetcher/language-fetcher.styl";
+@import "../../client/react/common/login-input-group/login-input-group.styl";
 @import "../../client/react/common/logo/logo.styl";
 @import "../../client/react/common/moving-figure/moving-figure.styl";
+@import "../../client/react/common/tool-tip/tool-tip.styl";
 @import "../../client/react/layout/with-main-nav/nav-list.styl";
 @import "../../client/react/layout/with-main-nav/with-main-nav.styl";
 @import "../../client/react/main-route.styl";
@@ -18,6 +20,9 @@
 @import "../../client/react/routes/component/show-icon/show-icon.styl";
 @import "../../client/react/routes/component/theme-picker/theme-box/theme-box.styl";
 @import "../../client/react/routes/component/theme-picker/theme-picker.styl";
+@import "../../client/react/routes/login-route/login-form/login-form.styl";
+@import "../../client/react/routes/login-route/login-form/sign-in.styl";
+@import "../../client/react/routes/login-route/login-route.styl";
 @import "../../client/react/routes/welcome-route/welcome-board/welcome-actions/welcome-actions.styl";
 @import "../../client/react/routes/welcome-route/welcome-board/welcome-board.styl";
 @import "../../client/react/routes/welcome-route/welcome-route.styl";
