--- a/client/react/layout/with-main-nav/with-main-nav.styl
+++ b/client/react/layout/with-main-nav/with-main-nav.styl
@@ -1,8 +1,20 @@
 
 
 .main-nav{
-  height 65px
+  .logo{
+      height 60px
+      img{
+        height 36px
 
+      }
+    font-size md + 0.1rem
+  }
+  .logo-dark-light{
+    color #1a1a1a
+  }
+  .logo-sky{
+    color white
+  }
   .right-side{
     flex-grow 1
     margin-left 300px
