--- a/client/react/common/login-input-group/login-input-group.styl
+++ b/client/react/common/login-input-group/login-input-group.styl
@@ -12,6 +12,16 @@
       width 100%
       transition all 0.3s ease
       font-size sm
+
+
+    }
+    &.isError{
+      input{
+        border-color danger !important
+      }
+      .placeholder{
+        color danger !important
+      }
     }
     .error-notify{
       font-size sm + 0.5rem
