--- a/client/react/routes/login-route/login-form/login-form.styl
+++ b/client/react/routes/login-route/login-form/login-form.styl
@@ -4,7 +4,7 @@
   margin auto
   &.dark-light {
     background-color white
-    .sign-in-form {
+    .login-child-form {
       .form-title {
         color #1a1a1a
       }
