--- a/client/react/routes/login-route/login-route.styl
+++ b/client/react/routes/login-route/login-route.styl
@@ -17,4 +17,11 @@
       }
     }
   }
+
+}
+.login-tooltip{
+  background-color danger
+  padding 7px 12px
+  font-size sm - 0.1rem
+  font-weight 550
 }
