--- a/client/style/main.styl
+++ b/client/style/main.styl
@@ -22,7 +22,9 @@
 @import "../../client/react/routes/component/theme-picker/theme-picker.styl";
 @import "../../client/react/routes/login-route/login-form/login-form.styl";
 @import "../../client/react/routes/login-route/login-form/sign-in.styl";
+@import "../../client/react/routes/login-route/login-form/sign-up.styl";
 @import "../../client/react/routes/login-route/login-route.styl";
+@import "../../client/react/routes/not-found-page/not-found-page.styl";
 @import "../../client/react/routes/welcome-route/welcome-board/welcome-actions/welcome-actions.styl";
 @import "../../client/react/routes/welcome-route/welcome-board/welcome-board.styl";
 @import "../../client/react/routes/welcome-route/welcome-route.styl";
